--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
+  "name": "your-project-name",
+  "version": "1.0.0",
+  "homepage": "https://Kishoth-45.github.io/MyPortfolio/",
   "dependencies": {
     "gh-pages": "^6.1.1"
+  },
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
