--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MyPortfolio",
+  "name": "myportfolio",
   "version": "1.0.0",
   "homepage": "https://Kishoth-45.github.io/MyPortfolio/",
   "dependencies": {
